JSAI/error/src/test/resources/base/prototype_a002.js

var foo = function() { print("constructed") };

foo["prototype"].x = 1;

var y = new foo();

var q = y instanceof foo;
print(q);


